--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,3 +1,5 @@
-<nav class="navbar navbar-light bg-light">
-  <span class="navbar-brand mb-0 h1">Todo app</span>
+<nav class="navbar navbar-dark bg-dark">
+  <span class="navbar-brand h1">VIDEO COURSE</span>
+  <span class="user-login">User login</span>
+  <span class="log-off">Log off</span>
 </nav>
