--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,5 +1,10 @@
 <nav class="navbar navbar-dark bg-dark">
-  <span class="navbar-brand h1">VIDEO COURSE</span>
-  <span class="user-login">User login</span>
-  <span class="log-off">Log off</span>
+  <div class="logo col-md-9">
+    <span class="navbar-brand h1">VIDEO COURSE</span>
+  </div>
+  <div class="log-in col-md-3">
+    <span class="log-text">User login</span>
+    <span class="log-text">Log off</span>
+  </div>
+
 </nav>
