--- a/src/app/courses/components/course-item/course-item.component.html
+++ b/src/app/courses/components/course-item/course-item.component.html
@@ -1,11 +1,17 @@
 <div class="container item-container">
-  <div class="row">
+
+  <div class="header row">
+    <div class="title col-md-6">
+      <h3>{{courseItem.title}}</h3>
+    </div>
+    <div class="time col-md-6">
+      <span>{{courseItem.duration}}</span>
+      <span>{{courseItem.creationDate}}</span>
+    </div>
+  </div>
+
+  <div class="description row">
     <div class="col-md-9">
-      <div class="header">
-        <h3>{{courseItem.title}}</h3>
-        <span>{{courseItem.duration}}</span>
-        <span>{{courseItem.creationDate}}</span>
-      </div>
       <p>{{courseItem.description}}</p>
     </div>
     <div class="col-md-3">
@@ -13,5 +19,6 @@
       <button type="button" (click)="remove()" class="btn btn-primary">Remove</button>
     </div>
   </div>
+
 </div>
 
