Create unit tests

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-dark bg-dark">
   <div class="logo col-md-9">
-    <span class="navbar-brand h1">VIDEO COURSE</span>
+    <span class="navbar-brand">VIDEO COURSE</span>
   </div>
   <div class="log-in col-md-3">
     <span class="log-text">User login</span>
