Remove NO_ERRORS_SCHEMA

--- a/src/app/courses/components/course-item/course-item.component.html
+++ b/src/app/courses/components/course-item/course-item.component.html
@@ -15,8 +15,8 @@
       <p>{{courseItem.description}}</p>
     </div>
     <div class="col-md-3">
-      <button type="button" class="btn btn-primary">Edit</button>
-      <button type="button" (click)="remove()" class="btn btn-primary">Remove</button>
+      <button type="button" class="edit btn btn-primary">Edit</button>
+      <button type="button" (click)="remove()" class="remove btn btn-primary">Remove</button>
     </div>
   </div>
 
