Add methods to courses service

--- a/src/app/courses/components/course-item/course-item.component.html
+++ b/src/app/courses/components/course-item/course-item.component.html
@@ -18,7 +18,7 @@
     </div>
     <div class="col-md-3">
       <button type="button" class="edit btn btn-primary">Edit</button>
-      <button type="button" (click)="remove()" class="remove btn btn-primary">Remove</button>
+      <button type="button" (click)="openDeleteModal()" class="remove btn btn-primary">Remove</button>
     </div>
   </div>
 
