--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -3,8 +3,8 @@
     <span class="navbar-brand">VIDEO COURSE</span>
   </div>
   <div class="log-in col-md-3">
-    <span class="log-text">User login</span>
-    <span class="log-text">Log off</span>
+    <a href="#" (click)="logIn()" class="log-text">User login</a>
+    <a href="#" (click)="logOff()" class="log-text">Log off</a>
   </div>
 
 </nav>
