--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <app-header></app-header>
-<app-breadcrumbs *ngIf="isLoggedIn()"></app-breadcrumbs>
-<div class="course-container" *ngIf="isLoggedIn()">
+<app-breadcrumbs *ngIf="isLoggedIn() && (!addingCourse)"></app-breadcrumbs>
+<div class="course-container" *ngIf="isLoggedIn() && (!addingCourse)">
   <app-search (term)="search($event)"></app-search>
-  <app-add></app-add>
+  <app-add (addingCourse)="adding($event)"></app-add>
   <div class="course-items-container">
     <li *ngFor="let item of courses | sortBy: 'creationDate' | filterBy:'title':searchTerm">
       <app-course-item  [courseItem]="item" (deleteCourseItem)="delete($event)"></app-course-item>
@@ -12,5 +12,6 @@
     </li>
   </div>
 </div>
-<app-login-page *ngIf="!isLoggedIn()"></app-login-page>
+<app-login-page *ngIf="(!isLoggedIn()) && (!addingCourse)"></app-login-page>
+<app-new-course *ngIf="addingCourse"></app-new-course>
 <app-footer></app-footer>
