--- a/src/app/courses/components/add/add.component.html
+++ b/src/app/courses/components/add/add.component.html
@@ -1,4 +1,4 @@
 <div>
-  <button type="button" class="btn btn-primary">Add course</button>
+  <button type="button" (click)="addCourse()" class="btn btn-primary">Add course</button>
 </div>
 
