--- a/src/app/courses/components/duration-input/duration-input.component.html
+++ b/src/app/courses/components/duration-input/duration-input.component.html
@@ -1,1 +1,2 @@
-<p>duration-input works!</p>
+<input type="text" id="duration" class="duration" name="duration"
+       (change)="inputChanged()" [(ngModel)]="duration" placeholder="Enter duration">
