--- a/src/app/courses/components/date-input/date-input.component.html
+++ b/src/app/courses/components/date-input/date-input.component.html
@@ -1,1 +1,3 @@
-<p>date-input works!</p>
+<input type="text" id="date" class="date" name="date"
+       (change)="inputChanged()" [(ngModel)]="date" placeholder="Enter date">
+
