--- a/src/app/courses/components/new-course/new-course.component.html
+++ b/src/app/courses/components/new-course/new-course.component.html
@@ -1,14 +1,16 @@
 <div>
-  <form #myform="ngForm" (ngSubmit)="add(myform)" >
+  <form #myform="ngForm" (ngSubmit)="addCourse(myform)" >
     <span>Title:</span><br>
     <input type="text" id="title" class="title" name="title" placeholder="Enter title" ngModel required>
     <br>
     <span>Description:</span><br>
     <input type="text" id="description" class="description" name="description" placeholder="Enter description" ngModel required>
     <br>
-    <app-date-input></app-date-input>
-    <app-duration-input></app-duration-input>
-    <input type="submit" class="submit" value="Log In">
+    <span>Date:</span><br>
+    <app-date-input (dateChanged)="updateDate($event)"></app-date-input><br>
+    <span>Duration:</span><br>
+    <app-duration-input (durationChanged)="updateDuration($event)"></app-duration-input><br>
+    <input type="submit" class="submit" value="Save">
     <button>Cancel</button>
   </form>
 </div>
