Adding edit behaviour

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
   <app-add (addingCourse)="adding($event)"></app-add>
   <div class="course-items-container">
     <li *ngFor="let item of courses | sortBy: 'creationDate' | filterBy:'title':searchTerm">
-      <app-course-item  [courseItem]="item" (deleteCourseItem)="delete($event)"></app-course-item>
+      <app-course-item  [courseItem]="item" (editCourseItem)="edit($event)" (deleteCourseItem)="delete($event)"></app-course-item>
     </li>
     <li class="no-data" *ngIf="courses.length === 0">
       NO DATA. FEEL FREE TO ADD NEW COURSE
@@ -13,5 +13,5 @@
   </div>
 </div>
 <app-login-page *ngIf="(!isLoggedIn()) && (!addingCourse)"></app-login-page>
-<app-new-course *ngIf="addingCourse"></app-new-course>
+<app-new-course [courseItem]="editCourseItem" (completed)="completeAddingCourse($event)" *ngIf="addingCourse"></app-new-course>
 <app-footer></app-footer>
