--- a/src/app/courses/components/course-item/course-item.component.html
+++ b/src/app/courses/components/course-item/course-item.component.html
@@ -17,7 +17,7 @@
       <p>{{courseItem.description}}</p>
     </div>
     <div class="col-md-3">
-      <button type="button" class="edit btn btn-primary">Edit</button>
+      <button type="button" (click)="openEditModal()" class="edit btn btn-primary">Edit</button>
       <button type="button" (click)="openDeleteModal()" class="remove btn btn-primary">Remove</button>
     </div>
   </div>
