--- a/src/app/courses/components/new-course/new-course.component.html
+++ b/src/app/courses/components/new-course/new-course.component.html
@@ -1,16 +1,15 @@
 <div>
-  <form #myform="ngForm" (ngSubmit)="addCourse(myform)" >
-    <span>Title:</span><br>
-    <input type="text" id="title" class="title" name="title" placeholder="Enter title" ngModel required>
-    <br>
-    <span>Description:</span><br>
-    <input type="text" id="description" class="description" name="description" placeholder="Enter description" ngModel required>
-    <br>
-    <span>Date:</span><br>
-    <app-date-input (dateChanged)="updateDate($event)"></app-date-input><br>
-    <span>Duration:</span><br>
-    <app-duration-input (durationChanged)="updateDuration($event)"></app-duration-input><br>
-    <input type="submit" class="submit" value="Save">
-    <button>Cancel</button>
-  </form>
+  <span>Title:</span><br>
+  <input type="text" class="title" [(ngModel)]="title"  placeholder="Enter title">
+  <br>
+  <span>Description:</span><br>
+  <textarea rows="4" cols="50" [(ngModel)]="description" class="description"></textarea>
+  <br>
+  <span>Date:</span><br>
+  <app-date-input [date]="date" (dateChanged)="updateDate($event)"></app-date-input><br>
+  <span>Duration:</span><br>
+  <app-duration-input [duration]="duration" (durationChanged)="updateDuration($event)"></app-duration-input>
+  <span>{{+duration | timeFormat}}</span><br>
+  <button class="submit" (click)="addCourse()">Save</button>
+  <button (click)="cancelAdd()">Cancel</button>
 </div>
