--- a/src/app/courses/components/add/add.component.html
+++ b/src/app/courses/components/add/add.component.html
@@ -1,4 +1,5 @@
 <div>
-  <button type="button" (click)="addCourse()" class="btn btn-primary">Add course</button>
+  <button (click)="addNewCourse()"
+          type="button" class="btn btn-primary">Add course</button>
 </div>
 
