--- a/src/app/courses/components/course-page/course-page.component.html
+++ b/src/app/courses/components/course-page/course-page.component.html
@@ -1,3 +1,4 @@
+<app-breadcrumbs></app-breadcrumbs>
 <div class="course-container" >
   <app-search (term)="search($event)"></app-search>
   <app-add></app-add>
