--- a/src/app/courses/components/duration-input/duration-input.component.html
+++ b/src/app/courses/components/duration-input/duration-input.component.html
@@ -1,2 +1,3 @@
 <input type="text" id="duration" class="duration" name="duration"
        (change)="inputChanged()" [(ngModel)]="duration" placeholder="Enter duration">
+<span>{{+duration | timeFormat}}</span>
