--- a/src/app/courses/components/new-course/new-course.component.html
+++ b/src/app/courses/components/new-course/new-course.component.html
@@ -1,3 +1,4 @@
+<app-breadcrumbs [courseName]="title"></app-breadcrumbs>
 <div>
   <span>Title:</span><br>
   <input type="text" class="title" [(ngModel)]="title"  placeholder="Enter title">
@@ -8,8 +9,7 @@
   <span>Date:</span><br>
   <app-date-input [date]="date" (dateChanged)="updateDate($event)"></app-date-input><br>
   <span>Duration:</span><br>
-  <app-duration-input [duration]="duration" (durationChanged)="updateDuration($event)"></app-duration-input>
-  <span>{{+duration | timeFormat}}</span><br>
+  <app-duration-input [duration]="duration" (durationChanged)="updateDuration($event)"></app-duration-input><br>
   <button class="submit" (click)="addCourse()">Save</button>
   <button (click)="cancelAdd()">Cancel</button>
 </div>
