--- a/src/app/core/components/breadcrumbs/breadcrumbs.component.html
+++ b/src/app/core/components/breadcrumbs/breadcrumbs.component.html
@@ -1,2 +1,5 @@
-<a href="courses" class="place-holder">Courses</a>
-<span>{{courseName}}</span>
+<div class="breadcrumb-container">
+  <a [routerLink]="" (click)="goToCourses()" >Courses</a>
+  <span class="course-name">{{courseName}}</span>
+</div>
+
