--- a/src/app/courses/components/duration-input/duration-input.component.html
+++ b/src/app/courses/components/duration-input/duration-input.component.html
@@ -1,3 +1,3 @@
-<input type="text" id="duration" class="duration" name="duration"
+<input type="text" id="duration" name="duration"
        (change)="inputChanged()" [(ngModel)]="duration" placeholder="Enter duration">
-<span>{{+duration | timeFormat}}</span>
+<span class="duration">{{+duration | timeFormat}}</span>
