--- a/src/app/courses/components/new-course/new-course.component.html
+++ b/src/app/courses/components/new-course/new-course.component.html
@@ -1,15 +1,21 @@
 <app-breadcrumbs [courseName]="title"></app-breadcrumbs>
-<div>
-  <span>Title:</span><br>
-  <input type="text" class="title" [(ngModel)]="title"  placeholder="Enter title">
-  <br>
-  <span>Description:</span><br>
-  <textarea rows="4" cols="50" [(ngModel)]="description" class="description"></textarea>
-  <br>
-  <span>Date:</span><br>
-  <app-date-input [date]="date" (dateChanged)="updateDate($event)"></app-date-input><br>
-  <span>Duration:</span><br>
-  <app-duration-input [duration]="duration" (durationChanged)="updateDuration($event)"></app-duration-input><br>
-  <button class="submit" (click)="addCourse()">Save</button>
-  <button (click)="cancelAdd()">Cancel</button>
-</div>
+<main class="main-container">
+  <div class="new-course-page">
+    <div class="form">
+      <span>Title:</span><br>
+      <input type="text" class="title" [(ngModel)]="title"  placeholder="Enter title">
+      <br>
+      <span>Description:</span><br>
+      <textarea rows="4" cols="50" [(ngModel)]="description" class="description"></textarea>
+      <br>
+      <span>Date:</span><br>
+      <app-date-input [date]="date" (dateChanged)="updateDate($event)"></app-date-input><br>
+      <span>Duration:</span><br>
+      <app-duration-input
+          [duration]="duration" (durationChanged)="updateDuration($event)">
+      </app-duration-input><br>
+      <button class="submit" (click)="addCourse()">Save</button>
+      <button (click)="cancelAdd()">Cancel</button>
+    </div>
+  </div>
+</main>
