--- a/src/app/login/login-page/login-page.component.html
+++ b/src/app/login/login-page/login-page.component.html
@@ -1,22 +1,23 @@
 <app-breadcrumbs></app-breadcrumbs>
-<div id="formContent">
-  <div class="fadeIn first">
-    <h1>Login</h1>
+<main class="main-container">
+  <div class="login-page">
+    <div class="login-title">
+      <h1>Login</h1>
+    </div>
+
+    <form class="form" #myform="ngForm" (ngSubmit)="logIn(myform)" >
+      <span>E-mail:</span> <span>*required</span><br>
+      <input type="text" id="email" class="login" name="email" placeholder="Enter e-mail" ngModel required>
+      <br>
+      <span>Password:</span> <span>*required</span><br>
+      <input type="text" id="password" class="password" name="password" placeholder="Enter password" ngModel required>
+      <br>
+      <input type="submit" class="submit" value="Log In"><br>
+    </form>
+
+    <div id="formFooter">
+      <a class="underlineHover" href="#">Forgot Password?</a>
+    </div>
+
   </div>
-
-  <form #myform="ngForm" (ngSubmit)="logIn(myform)" >
-    <span>E-mail:</span> <span>*required</span><br>
-    <input type="text" id="email" class="login" name="email" placeholder="Enter e-mail" ngModel required>
-    <br>
-    <span>Password:</span> <span>*required</span><br>
-    <input type="text" id="password" class="password" name="password" placeholder="Enter password" ngModel required>
-    <br>
-    <input type="submit" class="submit" value="Log In"><br>
-  </form>
-
-  <div id="formFooter">
-    <a class="underlineHover" href="#">Forgot Password?</a>
-  </div>
-
-</div>
-
+</main>
