Add children in router, fixes

--- a/src/app/core/components/breadcrumbs/breadcrumbs.component.html
+++ b/src/app/core/components/breadcrumbs/breadcrumbs.component.html
@@ -1,5 +1,5 @@
 <div class="breadcrumb-container">
-  <a [routerLink]="" (click)="goToCourses()" >Courses</a>
+  <a routerLink="/courses" >Courses</a>
   <span class="course-name">{{courseName}}</span>
 </div>
 
