--- a/src/app/courses/components/course-page/course-page.component.html
+++ b/src/app/courses/components/course-page/course-page.component.html
@@ -3,11 +3,16 @@
   <app-search (term)="search($event)"></app-search>
   <app-add></app-add>
   <div class="course-items-container">
-    <li *ngFor="let item of courses | sortBy: 'creationDate' | filterBy:'title':searchTerm">
-      <app-course-item  [courseItem]="item" (editCourseItem)="edit($event)" (deleteCourseItem)="delete($event)"></app-course-item>
+    <li *ngFor="let item of courses | sortBy: 'creationDate'">
+      <app-course-item  [courseItem]="item" (deleteCourseItem)="delete($event)"></app-course-item>
     </li>
-    <li class="no-data" *ngIf="courses.length === 0">
+    <li class="no-data" *ngIf="!courses || courses.length === 0">
       NO DATA. FEEL FREE TO ADD NEW COURSE
+    </li>
+    <li>
+      <div *ngIf="!searchTerm">
+        <a [routerLink]="" (click)="loadMore()">LOAD MORE...</a>
+      </div>
     </li>
   </div>
 </div>
