--- a/src/app/courses/components/search/search.component.html
+++ b/src/app/courses/components/search/search.component.html
@@ -1,5 +1,4 @@
 <div class="search-text">
-  <input type="text" [(ngModel)]="searchTerm" (keydown.enter)="search()" class="inner-text" placeholder="Text to search">
-  <button type="button" (click)="search()" class="btn btn-success">Search</button>
+  <input type="text" class="inner-text" placeholder="Text to search">
 </div>
 
