Add validations and local storage

--- a/src/app/courses/components/course-item/course-item.component.html
+++ b/src/app/courses/components/course-item/course-item.component.html
@@ -4,7 +4,9 @@
 
   <div class="header row">
     <div class="title col-md-8">
-      <h3>{{courseItem.name | uppercase}}</h3>
+      <h3>{{courseItem.name | uppercase}}
+        <span class="top-rated-star" *ngIf="courseItem.isTopRated">⭐</span>
+      </h3>
     </div>
     <div class="time col-md-4">
       <span class="duration">{{courseItem.length | timeFormat}}</span>
