--- a/src/app/courses/components/date-input/date-input.component.html
+++ b/src/app/courses/components/date-input/date-input.component.html
@@ -1,3 +1,4 @@
-<input type="text" id="date" class="date" name="date"
-       (change)="inputChanged()" [(ngModel)]="date" placeholder="Enter date">
+<input type="text" id="date" class="date"
+       [value]="value" placeholder="Enter date"
+       (blur)="onTouched()" (input)="onChange($event.target.value)">
 
