--- a/src/app/courses/components/duration-input/duration-input.component.html
+++ b/src/app/courses/components/duration-input/duration-input.component.html
@@ -1,3 +1,3 @@
-<input type="text" id="duration" name="duration"
-       (change)="inputChanged()" [(ngModel)]="duration" placeholder="Enter duration">
+<input type="text" id="duration" [value]="value" placeholder="Enter duration"
+       (blur)="onTouched()" (input)="onChange($event.target.value)">
 <span class="duration">{{+duration | timeFormat}}</span>
