--- a/src/app/courses/components/new-course/new-course.component.html
+++ b/src/app/courses/components/new-course/new-course.component.html
@@ -1,20 +1,35 @@
 <app-breadcrumbs [courseName]="title"></app-breadcrumbs>
 <main class="main-container">
   <div class="new-course-page">
-    <form class="form" #myform="ngForm" (ngSubmit)="addCourse(myform)">
-      <span>Title:</span><br>
-      <input type="text" class="title" name="name" [(ngModel)]="course.name"  placeholder="Enter title">
+    <form class="form" [formGroup]="form" (ngSubmit)="addCourse(form)">
+      <span>Title:</span>
+      <span *ngIf="form.get('name').touched && form.get('name').hasError('required')"
+            class="required-input"> This field is required</span>
+      <span *ngIf="form.get('name').hasError('maxlength')" class="required-input">
+         Max length is 50</span><br>
+      <input [class.required-input-square]="form.get('name').touched &&
+           form.get('name').hasError('required') || form.get('name').hasError('maxlength')"
+           type="text" class="title" formControlName="name"  placeholder="Enter title">
       <br>
-      <span>Description:</span><br>
-      <textarea rows="4" cols="50" name="description" [(ngModel)]="course.description" class="description"></textarea>
+      <span>Description:</span>
+      <span *ngIf="form.get('description').touched && form.get('description').hasError('required')"
+            class="required-input"> This field is required</span>
+      <span *ngIf="form.get('description').hasError('maxlength')" class="required-input">
+         Max length is 500</span><br>
+      <textarea [class.required-input-square]="form.get('description').touched &&
+           form.get('description').hasError('required') || form.get('description').hasError('maxlength')"
+           rows="4" cols="50" formControlName="description" class="description"></textarea>
       <br>
-      <span>Date:</span><br>
-      <app-date-input [date]="course.date" (dateChanged)="updateDate($event)"></app-date-input><br>
-      <span>Duration:</span><br>
-      <app-duration-input
-          [duration]="course.length" (durationChanged)="updateDuration($event)">
+      <span>Date:</span>
+      <span *ngIf="form.get('date').touched && form.get('date').hasError('required')"
+            class="required-input"> This field is required</span><br>
+      <app-date-input formControlName="date"></app-date-input><br>
+      <span>Duration:</span>
+      <span *ngIf="form.get('length').touched && form.get('length').hasError('required')"
+            class="required-input"> This field is required</span><br>
+      <app-duration-input formControlName="length">
       </app-duration-input><br>
-      <input type="submit" class="submit" value="Save" [disabled]="!myform.valid">
+      <input type="submit" class="submit" value="Save" [disabled]="!form.valid">
       <button (click)="cancelAdd()">Cancel</button>
     </form>
   </div>
