--- a/src/app/courses/components/tags-input/tags-input.component.html
+++ b/src/app/courses/components/tags-input/tags-input.component.html
@@ -2,7 +2,8 @@
   <tag-input [(ngModel)]="initialTags"
              [secondaryPlaceholder]="'Enter a new Author'"
              (onAdd)="onTagAdd($event)"
-             (onRemove)="onTagRemove($event)">
+             (onRemove)="onTagRemove($event)"
+             (onBlur)="onInputBlur()">
     <tag-input-dropdown
       [autocompleteItems]="tags"
       [showDropdownIfEmpty]="true"
