Fix compiling error

--- a/src/app/courses/components/course-item/course-item.component.html
+++ b/src/app/courses/components/course-item/course-item.component.html
@@ -9,7 +9,7 @@
       </h3>
     </div>
     <div class="time col-md-4">
-      <span class="duration">{{courseItem.length | timeFormat}}</span>
+      <span class="duration">{{courseItem.length.toString() | timeFormat}}</span>
       <span class="creation-date">{{courseItem.date | date}}</span>
     </div>
   </div>
