Fix date pipe error

--- a/src/app/courses/components/course-item/course-item.component.html
+++ b/src/app/courses/components/course-item/course-item.component.html
@@ -10,7 +10,7 @@
     </div>
     <div class="time col-md-4">
       <span class="duration">{{courseItem.length.toString() | timeFormat}}</span>
-      <span class="creation-date">{{courseItem.date | date}}</span>
+      <span class="creation-date">{{itemDate | date: 'dd/MM/yyyy'}}</span>
     </div>
   </div>
 
